# dhlab-ns

./: pyproject.toml
dhlab-meta-package/: pyproject.toml
dhlab-meta-package/docs/source/: conf.py
dhlab-namespace/dhlab-api/tests/api/dhlab_api/test_tests/: test_test.py
dhlab-namespace/dhlab-core/src/dhlab/ngram/: __init__.py
dhlab-ns-meta-package/: pyproject.toml  test.py
dhlab-ns-meta-package/src/dhlab_ns/: __init__.py  constants.py
dhlab-ns-namespace/dhlab-ns-api/: pyproject.toml
dhlab-ns-namespace/dhlab-ns-api/src/dhlab-ns/api/: dhlab_api.py  nb_ngram_api.py
dhlab-ns-namespace/dhlab-ns-api/src/dhlab_ns/api/: dhlab_api.py  nb_ngram_api.py
dhlab-ns-namespace/dhlab-ns-api/src/dhlab_ns/metadata/: metadata.py  natbib.py
dhlab-ns-namespace/dhlab-ns-api/tests/: test_natbib.py
dhlab-ns-namespace/dhlab-ns-api/tests/api/dhlab_api/: conftest.py  test_test.py
dhlab-ns-namespace/dhlab-ns-api/tests/api/dhlab_api/test_tests/: conftest.py  test_test.py
dhlab-ns-namespace/dhlab-ns-api/tests/api/nb_ngram_api/: test_get_ngram.py  test_make_word_graph.py
dhlab-ns-namespace/dhlab-ns-core/: pyproject.toml
dhlab-ns-namespace/dhlab-ns-core/src/dhlab_ns/ngram/: __init__.py  nb_ngram.py  ngram.py
dhlab-ns-namespace/dhlab-ns-core/src/dhlab_ns/text/: chunking.py  conc_coll.py  corpus.py  corpus_collection.py  dispersion.py  geo_data.py  nb_search_text.py  parse.py  utils.py  wildcard.py
dhlab-ns-namespace/dhlab-ns-core/src/dhlab_ns/wordbank/: wordbank.py
dhlab-ns-namespace/dhlab-ns-core/tests/: test_Collocation.py  test_Concordance.py  test_Corpus.py  test_Counts.py  test_conc_counts.py  test_corpus_collection.py  test_dispersion.py  test_word_conc.py
dhlab-ns-namespace/dhlab-ns-future/: pyproject.toml
dhlab-ns-namespace/dhlab-ns-future/src/dhlab_ns/future/: corpus_conc_coll.py  ngram.py
dhlab-ns-namespace/dhlab-ns-legacy/: pyproject.toml
dhlab-ns-namespace/dhlab-ns-legacy/src/dhlab_ns/legacy/: graph_networkx_louvain.py  nb_external_files.py  token_map.py
dhlab-ns-namespace/dhlab-ns-legacy/tests/: test_nbtext.py
dhlab-ns-namespace/dhlab-ns-utils/: pyproject.toml
dhlab-ns-namespace/dhlab-ns-utils/src/dhlab_ns/images/: nbpictures.py
