# This file manages the dhlab-ns namespace packages.
# The dhlab-ns meta-package lives separately in ${PROJECT_ROOT}/dhlab-ns-meta-package

[project]
dependencies = []
requires-python = ">=3.10"

[tool.pdm.dev-dependencies]
test = ["pytest>=8.3.5"]

dhlab-ns-namespace = [
    "dhlab-ns-api @ file:///${PROJECT_ROOT}/dhlab-ns-namespace/dhlab-ns-api",
    "dhlab-ns-core @ file:///${PROJECT_ROOT}/dhlab-ns-namespace/dhlab-ns-core",
    "dhlab-ns-future @ file:///${PROJECT_ROOT}/dhlab-ns-namespace/dhlab-ns-future",
    "dhlab-ns-legacy @ file:///${PROJECT_ROOT}/dhlab-ns-namespace/dhlab-ns-legacy",
    "dhlab-ns-utils @ file:///${PROJECT_ROOT}/dhlab-ns-namespace/dhlab-ns-utils",
]

dhlab-ns-meta = [
    "dhlab-ns @ file:///${PROJECT_ROOT}/dhlab-ns-meta-package",
]

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
# consider_namespace_packages = true
